# gimma

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake-build.yml
src/: consts.h  drawutils.cpp  drawutils.h  gimma.cpp  images.cpp  images.h  level.cpp  level.h
src/objects/: ball.cpp  ball.h  circle.cpp  circle.h  object.cpp  object.h  peg.cpp  peg.h  rect.cpp  rect.h
